# plantpy

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi_app/: main.py
fastapi_app/routers/: __init__.py  user.py
src/plantpy/: __init__.py  api.py
src/plantpy/models/: __init__.py  base.py  plant.py  session.py  user.py
tests/: test_database.py
